--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ethers": "^6.0.0",
+    "web3modal": "^1.9.12"
   }
 }
