--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "ethers": "5.4",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web3modal": "^1.9.12"
   }
 }
